# wordcereal

./: README.md  WordCereal.lhs  stack.yaml  wordcereal.cabal  wordcereal.txt
slides/: gm-2017.tex  mkfile
