name:          wordcereal
version:       0.1.0
build-type:    Simple
cabal-version: >= 1.10

executable wordcereal
  main-is:
    WordCereal.lhs
  default-language:
    Haskell2010
  build-depends:
    base == 4.*,
    mtl,
    QuickCheck >= 2.6,
    random-source,
    random-extras,
    random-fu

test-suite wordcereal-test
  type:
    exitcode-stdio-1.0
  main-is:
    WordCereal.lhs
  ghc-options:
    -main-is Main.validateWordList
  default-language:
    Haskell2010
  build-depends:
    base == 4.*,
    mtl,
    QuickCheck >= 2.6,
    random-source,
    random-extras,
    random-fu
